// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileAdd renders a curved-tile element with default values 1`] = `
<body>
  <div>
    <path
      d="M -58.4375,58.4375 L -68.75,58.4375 -68.75,51.5625 -58.4375,51.5625 -58.4375,41.25 -51.5625,41.25 -51.5625,51.5625 -41.25,51.5625 -41.25,58.4375 -51.5625,58.4375 -51.5625,68.75 -58.4375,68.75 Z"
    />
    
  </div>
</body>
`;

exports[`TileAdd renders a curved-tile element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 41.5625,141.5625 L 41.5625,131.25 48.4375,131.25 48.4375,141.5625 58.75,141.5625 58.75,148.4375 48.4375,148.4375 48.4375,158.75 41.5625,158.75 41.5625,148.4375 31.25,148.4375 31.25,141.5625 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd renders a curved-tile-enlarged element with default values 1`] = `
<body>
  <div>
    <path
      d="M -58.4375,58.4375 L -68.75,58.4375 -68.75,51.5625 -58.4375,51.5625 -58.4375,41.25 -51.5625,41.25 -51.5625,51.5625 -41.25,51.5625 -41.25,58.4375 -51.5625,58.4375 -51.5625,68.75 -58.4375,68.75 Z"
    />
    
  </div>
</body>
`;

exports[`TileAdd renders a curved-tile-enlarged element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 41.5625,141.5625 L 41.5625,131.25 48.4375,131.25 48.4375,141.5625 58.75,141.5625 58.75,148.4375 48.4375,148.4375 48.4375,158.75 41.5625,158.75 41.5625,148.4375 31.25,148.4375 31.25,141.5625 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd renders a straight-tile element with default values 1`] = `
<body>
  <div>
    <path
      d="M 3.4375,113.4375 L 3.4375,123.75 -3.4375,123.75 -3.4375,113.4375 -13.75,113.4375 -13.75,106.5625 -3.4375,106.5625 -3.4375,96.25 3.4375,96.25 3.4375,106.5625 13.75,106.5625 13.75,113.4375 Z"
    />
    
  </div>
</body>
`;

exports[`TileAdd renders a straight-tile element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M -13.4375,203.4375 L -23.75,203.4375 -23.75,196.5625 -13.4375,196.5625 -13.4375,186.25 -6.562500000000001,186.25 -6.5625,196.5625 3.75,196.5625 3.75,203.4375 -6.5625,203.4375 -6.562499999999999,213.75 -13.4375,213.75 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd renders a undefined element with default values 1`] = `
<body>
  <div>
    <path
      d="M 3.4375,113.4375 L 3.4375,123.75 -3.4375,123.75 -3.4375,113.4375 -13.75,113.4375 -13.75,106.5625 -3.4375,106.5625 -3.4375,96.25 3.4375,96.25 3.4375,106.5625 13.75,106.5625 13.75,113.4375 Z"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter direction is modified 1`] = `
<body>
  <div>
    <path
      d="M -13.4375,203.4375 L -23.75,203.4375 -23.75,196.5625 -13.4375,196.5625 -13.4375,186.25 -6.562500000000001,186.25 -6.5625,196.5625 3.75,196.5625 3.75,203.4375 -6.5625,203.4375 -6.562499999999999,213.75 -13.4375,213.75 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M -13.4375,203.4375 L -23.75,203.4375 -23.75,196.5625 -13.4375,196.5625 -13.4375,186.25 -6.562500000000001,186.25 -6.5625,196.5625 3.75,196.5625 3.75,203.4375 -6.5625,203.4375 -6.562499999999999,213.75 -13.4375,213.75 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter ratio is modified 1`] = `
<body>
  <div>
    <path
      d="M -13.4375,203.4375 L -23.75,203.4375 -23.75,196.5625 -13.4375,196.5625 -13.4375,186.25 -6.562500000000001,186.25 -6.5625,196.5625 3.75,196.5625 3.75,203.4375 -6.5625,203.4375 -6.562499999999999,213.75 -13.4375,213.75 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter rotation is modified 1`] = `
<body>
  <div>
    <path
      d="M 22.218254069479784,282.64310505117777 L 14.926215388493514,289.935143732164 10.064856267836,285.0737846115065 17.35689494882227,277.78174593052023 10.064856267835998,270.489707249534 14.926215388493512,265.62834812887644 22.218254069479784,272.9203868098627 29.510292750466053,265.62834812887644 34.37165187112357,270.489707249534 27.079613190137298,277.78174593052023 34.37165187112357,285.0737846115065 29.510292750466057,289.935143732164 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M -13.4375,203.4375 L -23.75,203.4375 -23.75,196.5625 -13.4375,196.5625 -13.4375,186.25 -6.562500000000001,186.25 -6.5625,196.5625 3.75,196.5625 3.75,203.4375 -6.5625,203.4375 -6.562499999999999,213.75 -13.4375,213.75 Z"
      fill="red"
      stroke="blue"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M -13.4375,203.4375 L -23.75,203.4375 -23.75,196.5625 -13.4375,196.5625 -13.4375,186.25 -6.562500000000001,186.25 -6.5625,196.5625 3.75,196.5625 3.75,203.4375 -6.5625,203.4375 -6.562499999999999,213.75 -13.4375,213.75 Z"
      fill="red"
      stroke-width="3"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter type is modified 1`] = `
<body>
  <div>
    <path
      d="M 41.5625,141.5625 L 41.5625,131.25 48.4375,131.25 48.4375,141.5625 58.75,141.5625 58.75,148.4375 48.4375,148.4375 48.4375,158.75 41.5625,158.75 41.5625,148.4375 31.25,148.4375 31.25,141.5625 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter x is modified 1`] = `
<body>
  <div>
    <path
      d="M -73.4375,203.4375 L -83.75,203.4375 -83.75,196.5625 -73.4375,196.5625 -73.4375,186.25 -66.5625,186.25 -66.5625,196.5625 -56.25,196.5625 -56.25,203.4375 -66.5625,203.4375 -66.5625,213.75 -73.4375,213.75 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileAdd updates when the parameter y is modified 1`] = `
<body>
  <div>
    <path
      d="M -13.4375,43.43750000000001 L -23.75,43.43750000000001 -23.75,36.56250000000001 -13.4375,36.56250000000001 -13.4375,26.250000000000007 -6.562500000000001,26.250000000000007 -6.5625,36.56250000000001 3.75,36.56250000000001 3.75,43.43750000000001 -6.5625,43.43750000000001 -6.562499999999999,53.75000000000001 -13.4375,53.75000000000001 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;
